--- a/_posts/2019-12-22-针对FGO的自动化测试实践.md
+++ b/_posts/2019-12-22-针对FGO的自动化测试实践.md
@@ -5,9 +5,9 @@ categoreis:
 ---
 > 此为网易游戏在中山大学计算机科学与技术专业2019~2020学年第一学期开设的选修课程《移动互联网编程实践》作业。
 
-课程报告地址：<https://wu-kan.github.io/posts/%E9%92%88%E5%AF%B9FGO%E7%9A%84%E8%87%AA%E5%8A%A8%E5%8C%96%E6%B5%8B%E8%AF%95%E5%AE%9E%E8%B7%B5>
+课程报告地址：<a href="../introduce.dpf">
 
-Airtest脚本开源地址：<https://github.com/wu-kan/FGO-AirTester.air>
+<!-- Airtest脚本开源地址：<https://github.com/wu-kan/FGO-AirTester.air>
 
 Airtest运行报告地址：<https://wu-kan.github.io/FGO-AirTester.air/log.html>
 
@@ -241,4 +241,4 @@ K-->L[副本选择页]
 
 ~~一个额外的收获是我以后刷QP岂不是都可以【手动狗头】…~~
 
-总的来说，由于是自己正在玩的游戏，本次作业让我写的格外有动力！感谢这门课程给我的这次机会，也感谢网易和腾讯开发的非常好用的工具~
+总的来说，由于是自己正在玩的游戏，本次作业让我写的格外有动力！感谢这门课程给我的这次机会，也感谢网易和腾讯开发的非常好用的工具~ -->
